Added my own Sketches

--- a/awesomeEnding.html
+++ b/awesomeEnding.html
@@ -31,7 +31,7 @@
         $100,000 bucks! Check out my new puppy, Boss!
     </h1>
 
-    <img src = "puppy.jpg">
+    <img src = "puppy.jpeg">
 
     <a href="index.html">[Retry Game]</a>
 </body>
