--- a/gameOver.html
+++ b/gameOver.html
@@ -33,7 +33,7 @@
         At least we still have each other, Boss...
     </h1>
 
-    <img src = "prison.jpg">
+    <img src = "prison.jpeg">
 
     <a href="index.html">GAME OVER [Retry Game]</a>
 </body>
