--- a/goodEnding.html
+++ b/goodEnding.html
@@ -31,7 +31,7 @@
         $1,000 bucks! We can finally get a secret hideout, Boss!
     </h1>
 
-    <img src = "apartment.jpg">
+    <img src = "apartment.jpeg">
 
     <a href="index.html">[Retry Game]</a>
 </body>
