--- a/greatEnding.html
+++ b/greatEnding.html
@@ -31,7 +31,7 @@
         $10,000 bucks! We can finally get a good secret hideout, Boss!
     </h1>
 
-    <img src = "niceApartment.jpg">
+    <img src = "niceApartment.jpeg">
 
     <a href="index.html">[Retry Game]</a>
 </body>
