--- a/okEnding.html
+++ b/okEnding.html
@@ -31,7 +31,7 @@
         $100 bucks ain't bad, Boss. We could take a trip to Six Flags!
     </h1>
 
-    <img src = "sixFlagsRide.jpg">
+    <img src = "sixFlagsRide.jpeg">
 
     <a href="index.html">[Retry Game]</a>
 </body>
