--- a/sadEnding.html
+++ b/sadEnding.html
@@ -31,7 +31,7 @@
         Nice, Boss, we scored a dollar...guess it's time for some food.
     </h1>
 
-    <img src = "McChicken.jpg">
+    <img src = "McChicken.jpeg">
 
     <a href="index.html">[Retry Game]</a>
 </body>
